# goobox-nodes-scraper

./: .dockerignore  .gitignore  .prospector.yaml  .travis.yml  Dockerfile  LICENSE  README.md  constraints.txt  make  pyproject.toml  requirements.txt  requirements_test.txt  run  setup.cfg
core/: exceptions.py  items.py  spiders.py
core/pipelines/: required_fields.py  resolve_geolocation.py  stats.py
core/tests/: test_items.py  test_spiders.py  utils.py
core/tests/pipelines/: test_required_fields.py  test_resolve_geolocation.py  test_stats.py
goobox_nodes_scraper/scrapy_settings/: development.py
sia/: items.py  utils.py
sia/spiders/: __init__.py  sia_nodes.py
sia/tests/: conftest.py  test_utils.py
sia/tests/spiders/: test_sia_nodes.py
storj/: items.py  utils.py
storj/spiders/: __init__.py  nodes.py  storj_nodes.py
storj/tests/: conftest.py  test_utils.py
storj/tests/spiders/: test_storj.py  test_storj_nodes.py
