[metadata]
description-file = README.md
license-file = LICENSE

[tool:pytest]
minversion = 3
addopts = --cov-report=term --cov-report=xml --cov-report=html --cov=.
norecursedirs =
	*settings*
	*urls*
	.tox*
	*docs*

[coverage:run]
source = .
branch = True
omit =
	*settings*
	*__init__.py
	*urls*
	.tox*
	*tests*
	*/migrations/*
	*/features/*
	*manage.py
	*wsgi.py
	*celery.py
	*apps.py
	run*
	build.py
	*/commands/*

[coverage:report]
show_missing = True
ignore_errors = True
fail_under = 90
exclude_lines =
	pragma: no cover
	pass

	raise AssertionError
	raise NotImplementedError

	if 0:
	if __name__ == .__main__.:

	def __repr__
	if cls\.debug
	if settings\.DEBUG

[coverage:paths]
source =
	core
	storj

[coverage:html]
directory = .test_report/coverage/

[coverage:xml]
output = .test_report/coverage.xml
