[metadata]
description-file = README.md
license-file = LICENSE

[tool:pytest]
minversion = 3
addopts = --cov-report=term --cov-report=xml --cov-report=html --cov=.
norecursedirs =
	*settings*
	*urls*
	.tox*
	*docs*

[coverage:run]
source = .
branch = True
omit =
	*settings*
	*__init__.py
	*urls*
	.tox*
	*tests*
	*/migrations/*
	*/features/*
	*manage.py
	*wsgi.py
	*celery.py
	*apps.py
	run*
	build.py

[coverage:report]
show_missing = True
ignore_errors = True
fail_under = 90
exclude_lines =
	pragma: no cover
	pass

	raise AssertionError
	raise NotImplementedError

	if 0:
	if __name__ == .__main__.:

	def __repr__
	if cls\.debug
	if settings\.DEBUG

[coverage:paths]
source =
	core
	sia
	storj

[coverage:html]
directory = .test_report/coverage_html/

[coverage:xml]
output = .test_report/coverage.xml

[isort]
atomic = true
multi_line_output = 5
not_skip = __init__.py
known_standard_library = types
known_third_party = pytest,apistar,apistar_crud,peewee,playhouse,apistar_peewee_orm

[flake8]
max-line-length = 120
